--- a/build.gradle
+++ b/build.gradle
@@ -5,31 +5,31 @@ buildscript {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
-apply plugin: 'forge'
+apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'idea'
 
-version= "R-1.7.10-16.02.1"
+version= "2.0.0"
 group= "de.canitzp.saltyadditions"
 archivesBaseName = "saltyadditions"
 
 minecraft {
-    version = "1.7.10-10.13.4.1558-1.7.10"
-    runDir = "idea"
+    version = "1.8.9-11.15.0.1718"
+    runDir = "run"
+    mappings = "stable_20"
+    makeObfSourceJar = false
+    useDepAts = true
+    replaceIn "SaltyAdditions.java"
+    replace "@VERSION", project.version.toString()
 }
 
 dependencies {
     compile fileTree(dir:'lib', include: '*.jar')
-    compile fileTree(dir:'lib/1.7.10', include: '*.jar')
 
 }
 
